--- a/rayon/index.html
+++ b/rayon/index.html
@@ -171,6 +171,17 @@
                     </div>
                 </div>
                 <!-- Question 2 -->
+                <div class="faq-item">
+                    <div class="faq-question">
+                        <h3>Rayon sera-t-il gratuit ?</h3>
+                        <span class="faq-toggle">+</span>
+                    </div>
+                    <div class="faq-answer">
+                    <p>
+                        Oui, Rayon est gratuit pour les utilisateurs. Vous pouvez publier et consulter des annonces sans frais. Cependant, avec un compte gratuit, vous êtes limité à 5 annonces simultanées. Pour les utilisateurs actifs, nous proposons un <strong>compte Premium à seulement 2,50€ par mois</strong>, qui vous permet de publier jusqu'à 20 annonces à la fois et de bénéficier de l'option <strong>"Urgent"</strong>, mettant votre annonce en avant au premier rang. Pour les professionnels, le <strong>compte Pro à 9,99€ par mois</strong> offre la possibilité de créer une <strong>boutique virtuelle personnalisable</strong>, avec accès à des statistiques détaillées, idéal pour les artisans et autres...
+                    </p>
+                    </div>
+                </div>
 
                 <!-- Question 3 -->
                 <div class="faq-item">
