--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </a>
     </div>
     
-    <div class="gallery-item personal-project no-phone">
+    <div class="gallery-item personal-project">
         <a href="winelux/index.html" target="_blank">
             <div class="project-logo"><img src="image/wlux-logo.png" alt="Logo"></div>
             <img src="image/wlux.jpg" class="gallery-img" alt="Winelux">
