--- a/winelux/index.html
+++ b/winelux/index.html
@@ -16,13 +16,13 @@
         </div>
         <div id="nav">
             <a href="#">Accueil</a>
-            <a href="#">Achats</a>
-            <a href="#">A propos</a>
-            <a href="#">Contact</a>
+            <a href="#buy">Achats</a>
+            <a href="#about">A propos</a>
+            <a href="#contact">Contact</a>
         </div>
     </div>
 
-    <div id="header2">
+    <div class="header2">
         <div>
             <div id="description">
                 <h2>Qu'esceque WineLux ?</h2>
@@ -58,8 +58,8 @@
         <button id="showMoreBtn" onclick="toggleText()">Afficher plus</button>
     </div>
 
-    <h1>Nos dernières productions:</h1>
-    <div id="middle">
+    <h1 id="buy">Nos dernières productions:</h1>
+    <div class="middle">
         <div class="section">
             <h2>Château de Lux Blanc</h2>
             <p>Un vin blanc raffiné aux arômes floraux et une finale persistante. Idéal pour accompagner les fruits de mer.</p>
@@ -88,7 +88,7 @@
             <img src="images/middle-image4.png" alt="Réserve du Lux">
         </div>
     </div>
-    <div id="bottom2">
+    <div class="bottom2" id="about">
         <div>
             <div id="description">
                 <h2>Des Saveurs Exceptionnelles, Partout au Luxembourg !</h2>
@@ -97,7 +97,7 @@
         </div>
         <img src="images/transparent-image2.png" id="transparent-image2" alt="Image Transparente">
     </div>
-    <div id="bottom1">
+    <div class="bottom1">
         <h1>Avis clients: </h1>
         <section class="comment-section">
             <div class="comment">
@@ -159,7 +159,7 @@
                 <h3>Avertissement</h3>
                 <p>La vente d'alcool est réservée aux personnes majeures. En accédant à notre site, vous confirmez avoir l'âge légal pour acheter de l'alcool dans votre pays de résidence.</p>
             </div>            
-            <div class="footer-section">
+            <div class="footer-section" id="contact">
                 <h3>Contact</h3>
                 <p>Email: winelux@email.404</p>
                 <p>Téléphone: +352 13 02 2024</p>
@@ -176,9 +176,9 @@
                 <h3>Liens utiles</h3>
                 <ul>
                     <li><a href="#">Accueil</a></li>
-                    <li><a href="#">Achats</a></li>
-                    <li><a href="#">A propos</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#buy">Achats</a></li>
+                    <li><a href="#about">A propos</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
             <h6>WineLux ©2022 - Léo Tosku</h6>
