--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
         <a href="#" class="link" id="everything">Tout</a>
         <a href="#" class="link" id="personal-project">Projets personnels</a>
         <a href="#" class="link" id="commissions">Commissions</a>
+        <a href="#" class="link" id="art-link">3D Art</a>
         <a href="#" class="link" id="info-link">Infos</a>
         <a href="#" class="link" style="pointer-events: none;">|</a>
         <a href="image/CV.pdf" target="_blank" class="download">CV<span class="material-symbols-outlined" style="font-size: 3.5vh;">download</span></a>
         <!--Mobile-->
         <a href="#" class="link-mobile" id="everything-mobile"><span class="material-symbols-outlined" style="font-size: 3.5vh;">dashboard</span></a>
+        <a href="#" class="link-mobile" id="art-link-mobile"><span class="material-symbols-outlined" style="font-size: 3.5vh;">landscape_2</span></a>
         <a href="#" class="link-mobile" id="info-link-mobile"><span class="material-symbols-outlined" style="font-size: 3.5vh;">info</span></a>
         <a href="image/CV.pdf" class="download-mobile" target="_blank"><span class="material-symbols-outlined" style="font-size: 3.5vh;">Description</span></a>
     </div>
@@ -77,6 +79,44 @@
         </div>
     </div>
 
+<!-- 3D Art Gallery -->
+<div id="art-gallery" style="display:none;">
+    <h1>Mes Créations 3D</h1>
+    
+    <div class="art-gallery-container">
+        <!-- Item 1 -->
+        <div class="art-item">
+            <img src="https://media.discordapp.net/attachments/1309250757937201245/1336346310625857547/20250203_220202.jpg?ex=67a378fc&is=67a2277c&hm=6442d4b0af88a3efb96b5d331ac470a208f3ef44aabec2bde13d429b2ef8895b&=&format=webp&width=662&height=662" class="art-img" alt="Projet 3D 1">
+            <div class="art-info">
+                <h3 class="art-title">"Sailing to the unkown"</h3>
+            </div>
+        </div>
+        <!-- Item 2 -->
+        <div class="art-item">
+            <img src="https://media.discordapp.net/attachments/1309250757937201245/1336346310944493640/20250203_215850.jpg?ex=67a378fc&is=67a2277c&hm=241193637e8720f9aa491cfd263b8aaa0fc2e54afcbfdf2f4a4477197c2b2777&=&format=webp&width=662&height=662" class="art-img" alt="Projet 3D 1">
+            <div class="art-info">
+                <h3 class="art-title">"Winter's last breath"</h3>
+            </div>
+        </div>
+        <!-- Item 3 -->
+        <div class="art-item">
+            <img src="https://media.discordapp.net/attachments/678455687809990656/1290254567413518386/20240929_215545.jpg?ex=67a33934&is=67a1e7b4&hm=bde099514b5ebc4e8df2bf3fe939f326813ae51cdcc36a258986345d1c2987bc&=&format=webp&width=662&height=662" class="art-img" alt="Projet 3D 1">
+            <div class="art-info">
+                <h3 class="art-title">"Melody of forgotten strings"</h3>
+            </div>
+        </div>
+        <!-- Item 4 -->
+        <div class="art-item">
+            <img src="https://cdn.discordapp.com/attachments/1309250757937201245/1336347897532383335/448375736_3688226968172007_883129021474623326_n.webp.jpg?ex=67a37a76&is=67a228f6&hm=c25fa0092440b27781628e9e8e012dc60c3e43e8cd8fe8cb2d1da3892e2c73e9&" class="art-img" alt="Projet 3D 1">
+            <div class="art-info">
+                <h3 class="art-title">"Rainy night on the hills"</h3>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Website Gallery -->
 <div class="gallery">
     
     <div class="gallery-item personal-project">
