--- a/index.html
+++ b/index.html
@@ -144,6 +144,13 @@
         </a>
     </div>
     -->
+    <div class="gallery-item personal-project">
+        <a href="DeepSeekStatusMonitor/index.html" target="_blank">
+            <div class="project-logo"><img src="Elements/image/dssm-logo.png" alt="Logo"></div>
+            <img src="Elements/image/dssm.jpg" class="gallery-img" alt="DeepSeek Status Monitor">
+            <div class="overlay">Léo Tosku - <strong>DeepSeek Status Monitor</strong></div>
+        </a>
+    </div>
 
     <div class="gallery-item commission">
         <a href="AppartementMarinaRoyale/index.html" target="_blank">
