--- a/smag/index.html
+++ b/smag/index.html
@@ -169,7 +169,7 @@
       <div class="container credit">
         <h2>Credits</h2>
         <h5>Galaxy Designer : <br><strong> Solargress</strong></h5>
-        <h5>3D-Modeler : <br><strong>L-Dev</strong></h5>
+        <h5>3D-Modeler : <br><strong>L-Dev, Louis Miles</strong></h5>
         <h5>Programmer : <br><strong>Super Hackio</strong></h5>
         <h5>Music Composer : <br><strong>Solargress</strong></h5>
         <h5>Material & Texture Designer : <br><strong>Gareth, Tetracold</strong></h5>
@@ -177,6 +177,7 @@
         <h5>Scenario : <br><strong>L-DEV </strong></h5>
         <h5 style="margin-top: 75px;" class="engine-credit">Galaxy Level Engine : <br><strong>Super Hackio </strong></h5>
         <h5 style="margin-top: 75px;" class="special-credit">Special Thanks : <br><strong>Mixlas, AlexSMG, FloatySMG, Zyphro</strong></h5>
+        <h5 style="margin-top: 75px; font-weight: lighter; text-align: center; text-transform: initial;">We're currently in need of talentuous SMG level designers and modelers ! <br> You can contact on Discord <strong>ldev.</strong> or <strong>solargress</strong> if interested.</h5>
         <h4>© Copyright 2020-2025 SMAG Team</h4>
       </div>
     </section>
