--- a/MyRoots/index.html
+++ b/MyRoots/index.html
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-    <img class="logo" src="/Images/Logo/logo.png" alt="logo">
+    <img class="logo" src="../Images/Logo/logo.png" alt="logo">
 
     <script src="script.js"></script>
 </body>
