--- a/MyRoots/index.html
+++ b/MyRoots/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="info-details">
             <div class="info-row">
-                <span class="info-label">Ville :</span>
+                <span class="info-label">Né(e) à :</span>
                 <span id="infoCity"></span>
             </div>
             <div id="infoFamily" style="display: none;">
