--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
 
 <!-- Website Gallery -->
 <div class="gallery">
+
+    <div class="gallery-item personal-project">
+        <a href="J3DTranslator/index.html" target="_blank">
+            <div class="project-logo"><img src="Elements/image/j3dt-logo.png" alt="Logo"></div>
+            <img src="Elements/image/j3dt.jpg" class="gallery-img" alt="DeepSeek Status Monitor">
+            <div class="overlay">Léo Tosku - <strong>J3DTranslator</strong></div>
+        </a>
+    </div>
     
     <div class="gallery-item personal-project">
         <a href="DeepSeekStatusMonitor/index.html" target="_blank">
