--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <!-- Website Gallery -->
 <div class="gallery">
 
-    <div class="gallery-item personal-project">
+    <div class="gallery-item no-phone personal-project">
         <a href="J3DTranslator/index.html" target="_blank">
             <div class="project-logo"><img src="Elements/image/j3dt-logo.png" alt="Logo"></div>
             <img src="Elements/image/j3dt.jpg" class="gallery-img" alt="DeepSeek Status Monitor">
