--- a/J3DTranslator/index.html
+++ b/J3DTranslator/index.html
@@ -46,7 +46,7 @@
                             <input type="checkbox" id="toggleUser" checked>
                             <span class="toggle-slider"></span>
                         </label>
-                        <span class="toggle-label">User-Friendly Explanation</span>
+                        <span class="toggle-label">General Explanation</span>
                     </div>
                     <div class="toggle-item">
                         <label class="toggle-switch">
