--- a/J3DTranslator/index.html
+++ b/J3DTranslator/index.html
@@ -9,7 +9,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="J3DTranslator - Error Log Analyzer">
-    <meta property="og:description" content="Understand whatever is J3DView yappin' about.">
+    <meta property="og:description" content="To understand whatever is J3DView yappin' about.">
     <meta property="og:image" content="https://l-dev31.github.io/J3DTranslator/images/preview.png">
     <meta property="og:url" content="https://l-dev31.github.io/J3DTranslator/"> 
     <meta property="og:type" content="website">
