--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <div class="achievement-item">
                 <i class="fas fa-wine-glass-empty" style="font-size: 2em; color: #AD3ECC;"></i>
-                <p>Participant aux "Up for Life" 2024</p>
+                <p>Participant aux "Up for Life" 2024-2025</p>
             </div>
         </div>
     </div>
