--- a/smag/index.html
+++ b/smag/index.html
@@ -153,6 +153,13 @@
           </figure>
         </div>
 
+        <h5><strong>SMAG Hubworld Teaser (2023)</strong></h5>
+        <div class="trailer__player">
+          <figure class="video">
+            <iframe width="1280" height="720" src="https://www.youtube.com/embed/S7PbdWTe97M"></iframe>
+          </figure>
+        </div>
+
         <h5><strong>Pollen Highlands video showcase (2022)</strong></h5>
         <div class="trailer__player">
           <figure class="video">
