--- a/MyRoots/index.html
+++ b/MyRoots/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="info-row">
                 <span class="info-label">Religion :</span>
-                <img class="info-icon" id="infoReligionIcon" src="" alt="">
+                <img class="religion-icon" id="infoReligionIcon" src="" alt="">
                 <span id="infoReligion"></span>
             </div>
         </div>
