--- a/Cemu/index.html
+++ b/Cemu/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="CemU - Nintendo WiiU Emulator">
+    <meta property="og:title" content="CemU - Nintendo WiiU Emulator (Redesign)">
     <meta property="og:description" content="Experience Wii U Games Like Never Before">
     <meta property="og:image" content="https://l-dev31.github.io/Cemu/assets/images/banner.png"> 
     <meta property="og:url" content="https://l-dev31.github.io/Cemu/"> 
