--- a/Cemu/index.html
+++ b/Cemu/index.html
@@ -29,7 +29,7 @@
         <div class="header-content">
             <div class="logo-container">
                 <div class="logo">
-                    <img src="assets/images/CemU-logo.png" alt="CemU Logo"> <!-- Changé de .svg à .png -->
+                    <img src="assets/images/cemu-logo.png" alt="CemU Logo"> <!-- Changé de .svg à .png -->
                 </div>
             </div>
             <nav>
