--- a/Cemu/index.html
+++ b/Cemu/index.html
@@ -437,7 +437,7 @@
         <div class="footer-content">
             <div class="footer-main">
                 <div class="footer-logo">
-                    <img src="assets/images/CemU-logo.png" alt="CemU Logo">
+                    <img src="assets/images/cemu-logo.png" alt="CemU Logo">
                     <p class="footer-tagline">Experience Wii U Games Like Never Before</p>
                 </div>
                 <div class="footer-links">
