--- a/Cemu/index.html
+++ b/Cemu/index.html
@@ -27,20 +27,24 @@
     
     <header>
         <div class="header-content">
-            <div class="logo-container">
-                <div class="logo">
-                    <img src="assets/images/cemu-logo.png" alt="CemU Logo"> <!-- Changé de .svg à .png -->
-                </div>
+            <div class="logo">
+                <img src="assets/images/cemu-logo.png" alt="CemU Logo">
+            </div>
+            <div class="hamburger-menu">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
             </div>
             <nav>
                 <ul>
-                    <li><a href="#home" class="nav-link active">Home</a></li>
+                    <li><a href="#home" class="nav-link">Home</a></li>
                     <li><a href="#download" class="nav-link">Download</a></li>
                     <li><a href="#about" class="nav-link">About</a></li>
                     <li><a href="#compatibility" class="nav-link">Compatibility</a></li>
                     <li><a href="#faq" class="nav-link">FAQ</a></li>
                 </ul>
             </nav>
+            <div class="nav-overlay"></div>
         </div>
     </header>
 
