--- a/Cemu/compatibility.html
+++ b/Cemu/compatibility.html
@@ -80,20 +80,22 @@
                         </div>
                     </div>
 
-                    <div class="compatibility-table">
-                        <table id="gamesTable">
-                            <thead>
-                                <tr>
-                                    <th>Game Title</th>
-                                    <th>Version</th>
-                                    <th>Region</th>
-                                    <th>Status</th>
-                                </tr>
-                            </thead>
-                            <tbody id="gamesTableBody">
-                                <!-- Games will be loaded here by JavaScript -->
-                            </tbody>
-                        </table>
+                    <div class="table-container">
+                        <div class="compatibility-table">
+                            <table id="gamesTable">
+                                <thead>
+                                    <tr>
+                                        <th>Game Title</th>
+                                        <th>Version</th>
+                                        <th>Region</th>
+                                        <th>Status</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="gamesTableBody">
+                                    <!-- Games will be loaded here by JavaScript -->
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
