--- a/index.html
+++ b/index.html
@@ -119,10 +119,18 @@
 <!-- Website Gallery -->
 <div class="gallery">
 
+    <div class="gallery-item no-phone commission">
+        <a href="Cemu/index.html" target="_blank">
+            <div class="project-logo"><img src="Elements/image/cemu-logo.png" alt="Logo"></div>
+            <img src="Elements/image/cemu.jpg" class="gallery-img" alt="Cemu">
+            <div class="overlay">Exzap - <strong>Cemu Nintendo WiiU Emulator</strong></div>
+        </a>
+    </div>
+
     <div class="gallery-item no-phone personal-project">
         <a href="J3DTranslator/index.html" target="_blank">
             <div class="project-logo"><img src="Elements/image/j3dt-logo.png" alt="Logo"></div>
-            <img src="Elements/image/j3dt.jpg" class="gallery-img" alt="DeepSeek Status Monitor">
+            <img src="Elements/image/j3dt.jpg" class="gallery-img" alt="J3DTranslator">
             <div class="overlay">Léo Tosku - <strong>J3DTranslator</strong></div>
         </a>
     </div>
