--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <!-- Website Gallery -->
 <div class="gallery">
 
-    <div class="gallery-item no-phone commission">
+    <div class="gallery-item commission">
         <a href="Cemu/index.html" target="_blank">
             <div class="project-logo"><img src="Elements/image/cemu-logo.png" alt="Logo"></div>
             <img src="Elements/image/cemu.jpg" class="gallery-img" alt="Cemu">
