--- a/Cemu/index.html
+++ b/Cemu/index.html
@@ -42,6 +42,9 @@
                     <li><a href="#about" class="nav-link">About</a></li>
                     <li><a href="#compatibility" class="nav-link">Compatibility</a></li>
                     <li><a href="#faq" class="nav-link">FAQ</a></li>
+                    <li><a href="wiki.html" target="_blank" class="nav-link external">Wiki <i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
+                    <li><a href="news.html" class="nav-link external">News <i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
+                    <li><a href="compatibility.html" class="nav-link external">Compatibility list <i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
                 </ul>
             </nav>
             <div class="nav-overlay"></div>
