--- a/index.html
+++ b/index.html
@@ -120,6 +120,14 @@
 <div class="gallery">
 
     <div class="gallery-item commission">
+        <a href="Azahar/index.html" target="_blank">
+            <div class="project-logo"><img src="Elements/image/azhr-logo.png" alt="Logo"></div>
+            <img src="Elements/image/azhr.jpg" class="gallery-img" alt="Azahar">
+            <div class="overlay">OpenSauce and PabloMK7 - <strong>Azahar Nintendo 3DS Emulator</strong></div>
+        </a>
+    </div>
+
+    <div class="gallery-item commission">
         <a href="Cemu/index.html" target="_blank">
             <div class="project-logo"><img src="Elements/image/cemu-logo.png" alt="Logo"></div>
             <img src="Elements/image/cemu.jpg" class="gallery-img" alt="Cemu">
