--- a/Azahar/index.html
+++ b/Azahar/index.html
@@ -47,8 +47,8 @@
                     </button>
                     <a href="https://github.com/azahar-emulator" class="secondary-btn" target="_blank">
                         <i class="fab fa-github"></i>
-                        <span>Star on GitHub</span>
-                        <span class="badge">3.2k</span>
+                        <span>GitHub</span>
+                        <span class="badge">4.4k k <i class="fa-solid fa-star"></i></span>
                     </a>
                 </div>
                 <div class="stats">
