--- a/Azahar/index.html
+++ b/Azahar/index.html
@@ -255,7 +255,7 @@
                             <div class="channel-category">
                                 <span><i class="fas fa-chevron-down"></i> General</span>
                                 <div class="channel"><i class="fas fa-hashtag"></i> chat</div>
-                                <div class="channel"><i class="fas fa-circle"></i> off-topic</div>
+                                <div class="channel"><i class="fas fa-hashtag"></i> off-topic</div>
                                 <div class="channel"><i class="fas fa-hashtag"></i> content</div>
                             </div>
                             <div class="channel-category">
