--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="achievements-container" style="display: flex; justify-content: center; gap: 30px;">
             <div class="achievement-item">
                 <i class="fas fa-trophy" style="font-size: 2em; color: #E94E1A;"></i>
-                <p>1er prix du jury "Trophées NSI" 2024</p>
+                <p>Prix spécial du jury "Trophées NSI" 2024-2025</p>
             </div>
             <div class="achievement-item">
                 <i class="fas fa-c" style="font-size: 2em; color: #2fe91a;"></i>
