--- a/smag/index.html
+++ b/smag/index.html
@@ -175,7 +175,7 @@
     <section id="credits" class="content-section">
       <div class="container credit">
         <h2>Credits</h2>
-        <h5>Galaxy Designer : <br><strong> Solargress</strong></h5>
+        <h5>Galaxy Designer : <br><strong> Solargress, Floaty</strong></h5>
         <h5>3D-Modeler : <br><strong>L-Dev, Louis Miles</strong></h5>
         <h5>Programmer : <br><strong>Super Hackio</strong></h5>
         <h5>Music Composer : <br><strong>Solargress</strong></h5>
