--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>L-Dev31</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">    <title>L-Dev31</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="styles-mobile.css">
     <link rel="icon" type="image/png" href="Elements/image/favicon.png">
