--- a/Bac/Oral/index.html
+++ b/Bac/Oral/index.html
@@ -9,10 +9,11 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<script src="../common.js"></script>
 <script src="script.js"></script>
 </head>
 <body>
-<div class="print-tabs">
+<div class="print-tabs no-print">
 <div class="tab active">Sujet 1 (Maths + NSI)</div>
 <div class="tab">Sujet 2 (NSI)</div>
 </div>
@@ -23,7 +24,7 @@
 <h2 class="student-name">Léo Tosku</h2>
 <p class="student-details">Terminale - Spécialités NSI & Mathématiques</p>
 </div>
-<div class="back-button-container">
+<div class="back-button-container no-print">
 <a href="../index.html" class="back-button">
 <i class="fas fa-arrow-left"></i>
 Retour au menu principal
@@ -35,7 +36,7 @@ Retour au menu principal
 </div>
 
 <!-- Bouton de retour minimaliste -->
-<a href="../index.html" class="home-btn">
+<a href="../index.html" class="home-btn no-print">
     <i class="fas fa-arrow-left"></i>
     Retour au menu principal
 </a>
