--- a/Bac/Oral/subject2.html
+++ b/Bac/Oral/subject2.html
@@ -295,7 +295,7 @@ function showError(message) {
 </div>
 
 <!-- Références au programme - Sujet 2 -->
-<div class="section program-section">
+<div class="section program-section no-print">
   <h2 class="section-title">Liens avec les programmes</h2>
   
   <div class="program-links">
@@ -333,7 +333,7 @@ function showError(message) {
 </div>
 
 <!-- Questions/Réponses anticipées - Sujet 2 -->
-<div class="section qna-section">
+<div class="section qna-section no-print">
   <h2 class="section-title">Questions/Réponses anticipées</h2>
 
   <div class="qna">
@@ -382,7 +382,7 @@ function showError(message) {
 </div>
 
 <!-- Chapitres de Lycée utilisés - Sujet 2 -->
-<div class="section chapters-section">
+<div class="section chapters-section no-print">
   <h2 class="section-title"><i class="fas fa-book"></i> Chapitres de Lycée utilisés</h2>
   
   <div class="chapters-grid">
