--- a/Bac/Maths/index.html
+++ b/Bac/Maths/index.html
@@ -17,6 +17,10 @@
     <script src="../ultra-loader.js"></script>
     <script src="../common.js"></script>
     <script src="maths-specific.js"></script>
-    <script>document.addEventListener('DOMContentLoaded',async function(){await window.UltraLoader.init();});</script>
+    <script>
+        document.addEventListener('DOMContentLoaded', async function() {
+            await window.UltraLoader.init();
+        });
+    </script>
 </body>
 </html>
