--- a/Bac/Philosophie/index.html
+++ b/Bac/Philosophie/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Philosophie - Révisions Baccalauréat - Léo Tosku</title>
-    <link rel="stylesheet" href="../common.css">
+    <title>Philosophie - Révisions Baccalauréat - Léo Tosku</title>    <link rel="stylesheet" href="../common.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="../mathJax.js"></script>
 </head>
 <body>
     <div class="container">
