--- a/Bac/Maths/lesson2.html
+++ b/Bac/Maths/lesson2.html
@@ -2,7 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>Leçon 2 : Manipulation des vecteurs, droites et plans</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <title>Leçon 2 : Manipulation des vecteurs, droites et plans</title>
     <link rel="stylesheet" href="../common.css">
     <link rel="stylesheet" href="styles.css">    <script src="../mathJax.js"></script>
 </head>
