--- a/Bac/Maths/lesson5.html
+++ b/Bac/Maths/lesson5.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">                <p>Démontrer par récurrence que pour tout $n \in \mathbb{N}$, la somme des $n$ premiers entiers est $S_n = \sum_{i=0}^{n} i = \frac{n(n+1)}{2}$. <span class="tex2jax_ignore">(Ici</span> $n_0 = 0$<span class="tex2jax_ignore">)</span>.</p>
+<html lang="fr">                
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>Leçon 5 : Suites</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <title>Leçon 5 : Suites</title>
     <link rel="stylesheet" href="../common.css">
     <link rel="stylesheet" href="styles.css">    <script src="../mathJax.js"></script>
     <style>
@@ -54,7 +55,7 @@
         <div class="page-break"></div>
         <section class="lesson-section">
             <h2 class="lesson-subtitle">2. Limite d'une suite</h2>
-            <!--PAGEBREAK-->
+            
             <div class="definition-box">
                 <h3 class="box-title">Limite finie (Convergence)</h3>
                 <p>Une suite $(u_n)$ converge vers un réel $L$ si tout intervalle ouvert contenant $L$ contient tous les termes de la suite à partir d'un certain rang.</p>
@@ -116,7 +117,7 @@
         <div class="page-break"></div>
         <section class="lesson-section">
             <h2 class="lesson-subtitle">4. Suites monotones</h2>
-            <!--PAGEBREAK-->
+            
             <div class="definition-box">
                 <h3 class="box-title">Définitions</h3>
                 <ul>
