--- a/Bac/Maths/lesson7.html
+++ b/Bac/Maths/lesson7.html
@@ -2,7 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>Leçon 7 : Compléments sur la dérivation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <title>Leçon 7 : Compléments sur la dérivation</title>
     <link rel="stylesheet" href="../common.css">
     <link rel="stylesheet" href="styles.css">    
     <script src="../mathJax.js"></script>
