--- a/Bac/Maths/lesson10.html
+++ b/Bac/Maths/lesson10.html
@@ -6,21 +6,6 @@
     <title>Leçon 10 : Fonctions sinus et cosinus</title>
     <link rel="stylesheet" href="../common.css">
     <link rel="stylesheet" href="styles.css">    <script src="../mathJax.js"></script>
-    <style>
-        /* Suggestion de saut de page avant les sections principales pour l'impression */
-        @media print {
-            .lesson-section {
-                page-break-before: always;
-            }
-            .lesson-section:first-of-type {
-                 page-break-before: auto;
-            }
-            h1.lesson-main-title {
-                 page-break-after: avoid;
-            }
-        
-        @media (max-width: 768px) {body {font-size: 14px;}}
-    </style>
 </head>
 <body>    <div class="lesson-container">
         <section class="lesson-section">
@@ -100,7 +85,7 @@
 
         <div class="page-break"></div>
         <section class="lesson-section">
-            <!--PAGEBREAK--><h2 class="lesson-subtitle">2. Dérivées des fonctions sinus et cosinus</h2>
+            <h2 class="lesson-subtitle">2. Dérivées des fonctions sinus et cosinus</h2>
             <div class="theorem-box">
                 <h3 class="box-title">Limites fondamentales</h3>
                 <p>Les limites suivantes sont essentielles pour établir les dérivées :</p>
@@ -251,6 +236,3 @@
     </div>
 </body>
 </html>
-
-
-
